# shadowsocks-client

./: .gitignore  CMakeLists.txt  CODE_DOCUMENTATION_RU.md  README.md  toolchain-mingw64.cmake
src/: main.c  network.c  network.h
